fix: responsive for up & overflow-x

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -65,13 +65,9 @@ a {
   color:white;
 }
 
-.main {
-  margin: 0 2%;
-}
-
 .section {
+  width:100%;
   height:100vh;
-  width:100vw;
   position : relative;
 }
 
